grid/03-grid-layout-3/style.css
* {
  margin: 0;
  padding: 0;
}

.container {
  text-align: center;
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: min-content 0.5fr 9fr 1fr;
  gap: 4px;

}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  background-color: #393f4d;
  grid-column: 1 / -1;
  display: grid;
  grid-template-columns: 1fr 2fr;
  align-items: center;
}

.logo {
  justify-self: start;
}

.menu {
  display: grid;
}

.menu ul {
  display: grid;
  grid-template-columns: repeat(4, minmax(40px, 1fr));
}

.menu ul,
.menu li {
  font-size: 16px;
}

.sidebar {
  background-color: #C50208;
  grid-area: 2 / 1 / 4 / 2;
  display: grid;
  gap: 48px;
  align-items: start;
  grid-template-rows: repeat(4, 150px);
}

.sidebar > * {
  display: grid;
  align-items: center;
  grid-template-rows: 100px;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.nav {
  background-color: #C50208;
  display: grid;
  align-items: center;
}

.nav ul {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.nav ul li {
  font-size: 16px;
  text-transform: uppercase;
}

.article {
  background-color: #bccbde;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-auto-rows: minmax(200px, 1fr);
  gap: 16px;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
  grid-column: 1 / -1;
}

.footer p {
  font-size: 13px;
  font-weight: normal;
}

li {
  list-style: none;
}

